--- a/css/style.css
+++ b/css/style.css
@@ -1,810 +1,187 @@
+/*Reset all fields CSS3 JewellSchool.org*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
 @font-face {
-    font-family: 'white';
-    src: url(whiteFestive.otf);
+    font-family: 'milk';
+    src: url('lemonmilk.otf');
 }
 
-html {
-    background-color: #fff9f9;
+header {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: inline-flex;
+    position: fixed;
+    z-index: 9999
 }
 
-#mainNav {
-    position: ;
-    text-align: center;
-    width: 330px;
+body, html {
+    height: 100%;
+}
+
+nav {
     margin: 0 auto;
 }
 
-.mainUl {
-    list-style: none;
-    margin: 0 auto;
-    padding: 0;
+.logo {
+    width: 50px;
+    margin: 15px 20px;
 }
 
-.mainUl li a {
-    display: block;
-    padding: 14px 16px;
-    text-align: center;
+.nav {
     text-decoration: none;
     color: white;
-    font-family: ;
-    font-size: 20px;
+    padding: 2rem;
+    font-size: 14px;
+    font-family: 'milk';
     text-transform: uppercase;
+    background-color: ;
+    display: inline-block;
+    letter-spacing: 2px;
 }
 
-#bg {
-    position: absolute;
+#videoWrapper {
     width: 100%;
     height: 100%;
-    z-index: -100;
-    opacity: 0.5;
+    overflow: hidden;
+    position: relative;
 }
 
-#leftSide {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 50%;
-    bottom: 0;
-    z-index: 100;
-    border-right: solid 1px #eab4b4;
-}
-
-#rightSide {
+#backgroundvid {
+    z-index: -9999;
     position: absolute;
     left: 50%;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    overflow: auto;
-    background-color: #fff9f9;
-}
-
-#lefttitle {
-    font-family: 'white';
-    font-size: 60px;
-    color: white;
-    text-align: center;
-}
-
-#containhead {
-    margin: 25% 0 0 0;
-}
-
-.fade-in{
-  animation: animationFrames ease 2.5s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  animation-fill-mode:forwards;
-  -webkit-animation: animationFrames ease 2.5s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-transform-origin: 50% 50%;
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation: animationFrames ease 2.5s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 50% 50%;
-  -moz-animation-fill-mode:forwards;
-  -o-animation: animationFrames ease 2.5s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 50% 50%;
-  -o-animation-fill-mode:forwards; 
-  -ms-animation: animationFrames ease 2.5s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 50% 50%;
-  -ms-animation-fill-mode:forwards;
-}
-
-@keyframes animationFrames{
-  0% {
-    opacity:0;
-    transform:  translate(-300px,0px)  ;
-  }
-  100% {
-    opacity:1;
-    transform:  translate(0px,0px)  ;
-  }
-}
-
-@-moz-keyframes animationFrames{
-  0% {
-    opacity:0;
-    -moz-transform:  translate(-300px,0px)  ;
-  }
-  100% {
-    opacity:1;
-    -moz-transform:  translate(0px,0px)  ;
-  }
-}
-
-@-webkit-keyframes animationFrames {
-  0% {
-    opacity:0;
-    -webkit-transform:  translate(-300px,0px)  ;
-  }
-  100% {
-    opacity:1;
-    -webkit-transform:  translate(0px,0px)  ;
-  }
-}
-
-@-o-keyframes animationFrames {
-  0% {
-    opacity:0;
-    -o-transform:  translate(-300px,0px)  ;
-  }
-  100% {
-    opacity:1;
-    -o-transform:  translate(0px,0px)  ;
-  }
-}
-
-@-ms-keyframes animationFrames {
-  0% {
-    opacity:0;
-    -ms-transform:  translate(-300px,0px)  ;
-  }
-  100% {
-    opacity:1;
-    -ms-transform:  translate(0px,0px)  ;
-  }
-}
-
-#rightfade {
-    padding: 0 100px;
-    color: #e28694;
-    margin-top: 25%;
-    text-align: center;
-    animation: fadein 4s;
-    -moz-animation: fadein 4s; /* Firefox */
-    -webkit-animation: fadein 4s; /* Safari and Chrome */
-    -o-animation: fadein 4s; /* Opera */
-}
-
-@keyframes fadein {
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-moz-keyframes fadein { /* Firefox */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-webkit-keyframes fadein { /* Safari and Chrome */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}
-@-o-keyframes fadein { /* Opera */
-    from {
-        opacity:0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-#festone, #festtwo {
-    font-family: 'white';
-    font-size: 40px;
-    color: white;
-    margin: 4px 0 0 0;
-    opacity: 0;
-}
-
-#festdis {
-    display: inline-flex;
-}
-
-#festdis:hover #festone {
-    animation: festanimation ease-out 1.5s;
-    -webkit-animation: festanimation ease-out 1.5s;
-    animation-fill-mode: forwards;
-    -webkit-animation-fill-mode: forwards;
-}
-#festdis:hover #festtwo {
-    animation: festanimationtwo ease-out 1.5s;
-    -webkit-animation: festanimationtwo ease-out 1.5s;
-    animation-fill-mode: forwards;
-    -webkit-animation-fill-mode: forwards; 
-}
-
-@keyframes festanimation{
-  from {
-    opacity:0;
-    transform:  translate(-20px,0px)  ;
-  }
-  to {
-    opacity:1;
-    transform:  translate(10px,0px)  ;
-  }
-}
-
-@-webkit-keyframes festanimation {
-  from {
-    opacity:0;
-    -webkit-transform:  translate(-20px,0px)  ;
-  }
-  to {
-    opacity:1;
-    -webkit-transform:  translate(10px,0px)  ;
-  }
-}
-
-
-@keyframes festanimationtwo{
-  from {
-    opacity:0;
-    transform:  translate(20px,0px)  ;
-  }
-  to {
-    opacity:1;
-    transform:  translate(-10px,0px)  ;
-  }
-}
-
-#mainhead {
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 1px;
-    font-size: 40px;
-    color: #b76e79;
-}
-
-#invert {
-    transform: rotate(180deg);
-}
-
-#magic {
-    animation: fadein 1s;
-    -moz-animation: fadein 1s; /* Firefox */
-    -webkit-animation: fadein 1s; /* Safari and Chrome */
-    -o-animation: fadein 1s; /* Opera */
-}
-
-#line {
-    border-top: 1px solid;
-    margin: -20px 60px 0 60px;
-}
-
-#links {
-    font-size: 12px;
-    color: #859e8c;
-    word-break: break-all;
-}
-
-#letblock {
-    text-align: left;
-    background: white;
-    border: 1px solid lightgray;
-    margin: 30px auto;
-    width: 200px; 
-    box-shadow: 4px 4px 16px 0px #b1b1b1;
-    transition: 0.5s;
-    color: black;
-}
-
-#letp {
-    padding: 20px;
-    margin: 0;
-    font-size: 4px;
-}
-
-#letcontain {
+    top: 50%;
+    object-fit: cover;
+    height: 100%;
     width: 100%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
-#expcon {
-    background: #b7caba;
-    border-radius: 10px;
-    padding: 20px 30px;
-    text-align: left;
-    margin: 20px auto;
-    color: white;
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 250px 250px 250px;
+    grid-template-areas:
+        "a b c"
+        "d e f"
+        "g h i";
+    /*grid-column-gap: 10px;
+    grid-row-gap: 10px;*/)
+    display: grid;
+    padding: 0;
+    margin: 40px 20px;
 }
 
-#exph {
-    font-size: 18px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    margin: 0;
+.a {
+    grid-area: a;
+    background-image: url(owl.jpg);
+    background-size: cover;
 }
 
-#expp {
-   text-align: right;
-    margin: -42px 0 0 0;
-    font-size: 13px;
+.b {
+    grid-area: b;
+    background-image: url(dog.jpg);
+    background-size: cover;
 }
 
-.exppp {
-    margin: 6px 0 0 0 !important;
+.c {
+    grid-area: c;
+    background-image: url(pet.jpg);
+    background-size: cover;
 }
 
-/*#year {
-    background: rgba(226, 134, 148, 0.62);
-    color: white;
-    width: 80px;
-    padding: 10px;
-    border-radius: 70px;
-    margin: 20px auto;
-}*/
-
-#expn {
-    text-align: center;
-    font-size: 1.3em;
-    font-weight: bold;
-    letter-spacing: 1px;
-    margin: 0;
+.d {
+    grid-area: d;
+    background-image: url(field.jpg);
+    background-size: cover;
 }
 
-#workpic {
+.e {
+    grid-area: e;
+    background-image: url(mountain.jpg);
+    background-size: cover;
+}
+
+.f {
+    grid-area: f;
+    background-image: url(truck.jpg);
+    background-size: cover;
+}
+
+.g {
+    grid-area: g;
+    background-image: url(view.jpg);
+    background-size: cover;
+}
+
+.h {
+    grid-area: h;
+    background-image: url(wish.jpg);
+    background-size: cover;
+}
+
+.i {
+    grid-area: i;
+    background-image: url(nature.jpg);
+    background-size: cover;
+}
+
+footer {
     width: 100%;
-    z-index: 5;
-    margin: 10px auto 10px;
-    border-radius: 10px;
-    border: 1px solid #bb999e;
-    box-shadow: 4px 4px 10px 0px #b1b1b1;
-    /*border-top: 0;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;*/
-}
-
-/*#pictitle {
-    position: absolute;
-    top: -20px;
-    width: 100%;
-    background: #b76e79;
-    left: 1px;
+    background-color: gainsboro;
     color: white;
-    padding: 10px 0;
-    z-index: -1;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}*/
-
-#pictitle {
-    font-weight: bold;
-    letter-spacing: 1px;
-    font-size: 20px;
-    margin-top: 20px;
-}
-
-#workpic:hover{
-     animation: letfadein 0.5s;
-    -moz-animation: letfadein 0.5s; /* Firefox */
-    -webkit-animation: letfadein 0.5s; /* Safari and Chrome */
-    -o-animation: letfadein 0.5s; /* Opera */
-    animation-fill-mode: forwards;
-    -webkit-animation-fill-mode: forwards; 
-    box-shadow: 4px 4px 16px 0px #5d5d5d;
-}
-
-#piccontain {
-    position: relative;
-    margin: 30px 0 0 0;
-}
-
-#letdesc {
-    line-height: 1.5;
-    font-size: 12px;
-    margin: 10px 0;
-}
-
-#letcon {
-    margin: -15px auto;
-    font-size: 12px;
-    width: 200px;
-}
-
-@keyframes letfadein {
-    from {
-        opacity:1;
-    box-shadow: 4px 4px 16px 0px #b1b1b1;
-    }
-    to {
-        opacity:0.5;
-        box-shadow: 4px 4px 16px 0px #5d5d5d;
-    }
-}
-@-moz-keyframes letfadein { /* Firefox */
-    from {
-        opacity:1;
-    box-shadow: 4px 4px 16px 0px #b1b1b1;
-    }
-    to {
-        opacity:0.5;
-        box-shadow: 4px 4px 16px 0px #5d5d5d;
-    }
-}
-@-webkit-keyframes letfadein { /* Safari and Chrome */
-    from {
-        opacity:1;
-    box-shadow: 4px 4px 16px 0px #b1b1b1;
-    }
-    to {
-        opacity:0.5;
-        box-shadow: 4px 4px 16px 0px #5d5d5d;
-    }
-}
-@-o-keyframes letfadein { /* Opera */
-    from {
-        opacity:1;
-    box-shadow: 4px 4px 16px 0px #b1b1b1;
-    }
-    to {
-        opacity: 0.5;
-        box-shadow: 4px 4px 16px 0px #5d5d5d;
-    }
-}
-
-#leta {
-    color: #b76e79;
-    text-decoration: none;
-}
-
-#worktag {
-    text-transform: uppercase;
-    font-size: 12px;
-    padding: 8px 10px;
-    border: 2px solid #b76e79;
-    display: inline-block;
-    color: rgba(183, 110, 121, 0.9);
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border-radius: 8px;
-}
-
-#eduimg {
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.5s;
-    border: 1px solid #eee;
-    box-shadow: 4px 4px 10px 0px #b1b1b1;
-    margin: 20px 0 0 0;
-}
-
-#eduimg:hover, #letblock:hover {opacity: 0.7;}
-
-/* The Modal (background) */
-.edumodal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.emodal-content {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 900px;
-}
-
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#educap {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
     text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
+    font-family: ;
+    font-size: 16px;
 }
 
-/* Add Animation - Zoom in the Modal */
-.emodal-content, #educap { 
-    -webkit-animation-name: modfade;
-    -webkit-animation-duration: 1s;
-    animation-name: modfade;
-    animation-duration: 1s;
-}
-
-@-webkit-keyframes modfade {
-    from {-webkit-opacity:0;} 
-    to {-webkit-opacity:1;}
-}
-
-@keyframes modfade {
-    from {opacity:0;} 
-    to {opacity:1;}
-}
-
-/* The Close Button */
-.close {
-    position: fixed;
-    top: 15px;
-    right: 50px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-    .modal-content {
-        width: 100%;
-    }
-}
-
-#subhead {
-    color: #b76e79;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 30px;
-}
-
-
-/*LETTER MODAL -------------------------------------------*/
-.letmod {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
-}
-
-#letblock:hover, #letblock:focus {
-    cursor: pointer;
-}
-
-.letcontent {
-    background-color: #fefefe;
-    margin: 100px auto;
+p {
     padding: 50px;
-    border: 1px solid #888;
-    width: 700px;
-    -webkit-animation-name: modfade;
-    -webkit-animation-duration: 1s;
-    animation-name: modfade;
-    animation-duration: 1s;
 }
 
-#letter {
-    width: 700px;
+#a, #b, #c, #d, #e, #f, #g, #h, #i {
+    letter-spacing: 2px;
+    font-family: 'milk';
+    visibility: hidden;
+    color: white;
+    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    -webkit-transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+    height: 250px;
 }
 
-#hold {
-    display: inline-flex;
-    width: 100%;
+.a, .b, .c, .d, .e, .f, .g, .h, .i {
+    transition: opacity 0.5s ease-in-out;
+    -webkit-transition: opacity 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out;
 }
 
-#rightp {
-    text-align: right;
-    margin: 0;
-    font-size: 4px;
-    padding: 20px 20px 0 0;
-    margin-bottom: -20px;
+.a:hover #a, .b:hover #b, .c:hover #c, .d:hover #d, .e:hover #e, .f:hover #f, .g:hover #g, .h:hover #h, .i:hover #i {
+    visibility: visible;
 }
 
-#rp {text-align: right;}
-
-#letdesct {
-    line-height: 1.5;
-    font-size: 12px;
-    margin: 10px 0;
-    color: #859e8c;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-@-webkit-keyframes festanimationtwo {
-  from {
-    opacity:0;
-    -webkit-transform:  translate(20px,0px)  ;
-  }
-  to {
-    opacity:1;
-    -webkit-transform:  translate(-10px,0px)  ;
-  }
-}
-
-@media screen and (max-width: 1000px), screen and (max-width: 1250px) and (min-width: 1000px) {
-    #leftSide {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 55%;
-    bottom: 0;
-}
-
-#rightSide {
-    left: 55%;
-    top: 0;
-    bottom: 0;
-    right: 0;
-}
-    
-    #expp {
-        margin: 5px 0 0 0;
-        text-align: center;
-}
-    #expcon {
-        text-align: center;
-}
-    
-    
-}
-
-@media only screen and (max-width: 1000px) {
-    #containhead {
-        margin-top: 10%;
-    }
-    #mainNav {
-        width: 330px;
-        margin: 0 auto;
-    }
-    #leftSide {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 700px;
-        bottom: 0;
-        border-right: none;
-    }
-    #rightSide {
-        left: 0;
-        top: 700px;
-        bottom: 0;
-        right: 0;
-        position: relative;
-    } 
-    #mainhead {
-    }
-    #rightfade {
-        margin-top: 10% !important;
-    }
-    
-    .fade-in{
-  animation: animationFrames ease 2.5s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%;
-  animation-fill-mode:forwards;
-  -webkit-animation: animationFrames ease 2.5s;
-  -webkit-animation-iteration-count: 1;
-  -webkit-transform-origin: 50% 50%;
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation: animationFrames ease 2.5s;
-  -moz-animation-iteration-count: 1;
-  -moz-transform-origin: 50% 50%;
-  -moz-animation-fill-mode:forwards;
-  -o-animation: animationFrames ease 2.5s;
-  -o-animation-iteration-count: 1;
-  -o-transform-origin: 50% 50%;
-  -o-animation-fill-mode:forwards; 
-  -ms-animation: animationFrames ease 2.5s;
-  -ms-animation-iteration-count: 1;
-  -ms-transform-origin: 50% 50%;
-  -ms-animation-fill-mode:forwards;
-}
-
-@keyframes animationFrames{
-  0% {
-    opacity:0;
-    transform:  translate(0px,-200px)  ;
-  }
-  100% {
-    opacity:1;
-    transform:  translate(0px,0px)  ;
-  }
-}
-
-@-moz-keyframes animationFrames{
-  0% {
-    opacity:0;
-    -moz-transform:  translate(0px,-200px)  ;
-  }
-  100% {
-    opacity:1;
-    -moz-transform:  translate(0px,0px)  ;
-  }
-}
-
-@-webkit-keyframes animationFrames {
-  0% {
-    opacity:0;
-    -webkit-transform:  translate(-0,-200px)  ;
-  }
-  100% {
-    opacity:1;
-    -webkit-transform:  translate(0px,0)  ;
-  }
-}
-
-@-o-keyframes animationFrames {
-  0% {
-    opacity:0;
-    -o-transform:  translate(0,-200px)  ;
-  }
-  100% {
-    opacity:1;
-    -o-transform:  translate(0px,0px)  ;
-  }
-}
-
-@-ms-keyframes animationFrames {
-  0% {
-    opacity:0;
-    -ms-transform:  translate(0px,-200px)  ;
-  }
-  100% {
-    opacity:1;
-    -ms-transform:  translate(0px,0px)  ;
-  }
-}
-    
-    #rightfade {
-    padding: 0 200px;
-}
-    
-}
-
-@media only screen and (max-width: 650px) {
-    #containhead {
-    margin: 30% 0 0 0;
-}
-    #bg {
-        height: 500px;
-    }
-    
-    #leftSide {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 500px;
-        bottom: 0;
-        border-right: none;
-    }
-    #rightSide {
-        left: 0;
-        top: 500px;
-        bottom: 0;
-        right: 0;
-        position: relative;
-    } 
-    
-    #rightfade {
-    padding: 0 60px;
-}
-    
+.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover, .g:hover, .h:hover, .i:hover {
+    opacity: 0.5;
 }
