--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ p {
 	font-size: 50px;
 	//font-weight: bold;
 }
-
+/*
 .text {
 	color: #8167D6;
 	font-size: 50px;
@@ -79,7 +79,7 @@ p {
 	border: 2px solid white;
 }
 
-/*.four, .six {
+.four, .six {
 	background-color: #A39BFA;
 	border-radius: 10px;
 	transform: rotate(45deg);
@@ -107,7 +107,7 @@ p {
 
 .seven {
 	margin-left: 40px;
-}*/
+}
 
 .eight, .nine, .ten {
 	display: block;
@@ -188,7 +188,7 @@ p {
 	margin-left: -55px;
 	margin-top: -10px;
 }
-
+*/
 
 
 
