--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ p {
 	text-align: center;
 }
 
+/* -------------------------------------*/
+
 .user {
 	background-color: #1E2124;
 	margin-right: 24px;
