--- a/style.css
+++ b/style.css
@@ -136,16 +136,14 @@ p {
 	vertical-align: middle;
 	position: relative;
 	margin-right: 5px;
+	display: inline-block;
 }
 
 .name {
-	padding: 10px 5px;
 	position: relative;
-	padding:  4px 6px;
-	color: white;
-	font-family: Arial, Helvetica, sans-serif;
 	letter-spacing: .5px;
 	font-size: 14px;
+	display: inline-block;
 }
 
 .login-btn, #user-profile {
@@ -157,6 +155,7 @@ p {
 	border: 0px;
 	color: white;
 	font-family:  Arial, Helvetica, sans-serif;
+	align-items: center;
 }
 
 .spacer {
