--- a/style.css
+++ b/style.css
@@ -241,23 +241,9 @@ h2 {
     background-size: cover;
 }
 
-.new-rel-grid {
+.new-releases {
 	display: grid;
 	grid-template-rows: auto 1fr;
 	grid-template-columns: repeat(5,1fr);
 	grid-gap: 10px;
-}
-
-.recplaygrid {
-	display: grid;
-	grid-template-rows: auto 1fr;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-gap: 16px;
-	grid-template-areas:
-		'topbar topbar topbar topbar'
-		'';
-}
-
-.recplay {
-	grid-area: topbar;
 }
