--- a/style.css
+++ b/style.css
@@ -236,8 +236,9 @@ h2 {
 }
 
 #new-releases {
+	margin-top: 20px;
 	display: grid;
-	grid-template-columns: repeat(5,1fr);
+	grid-template-columns: repeat(4,1fr);
 	grid-gap: 16px;
 }
 
@@ -258,4 +259,17 @@ h2 {
 .album-title, .artist {
 	display: block;
 	font-family: Arial, Helvetica, sans-serif;
+}
+
+.album-title {
+	color:white;
+	font-weight: bold;
+	letter-spacing: 0.5px;
+	margin-bottom: 2px;
+}
+
+.artist {
+	color: #999999;
+	font-size: 14px;
+	letter-spacing: 0.4px;
 }
