--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ p {
   font-weight: bold;
   color: white;
   letter-spacing: 0.5px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat';
   align-items: center;
 }
 
@@ -105,7 +105,7 @@ p {
 .nav-divider {
 	border: 1px solid #7663f27a;
 	width: 90%;
-	margin: auto;
+	margin: 10px auto;
 }
 
 /* Now Playing Section --------------------------------------------------------*/
@@ -160,7 +160,7 @@ p {
 	background-color: #7663F2;
 	border: 0px;
 	color: white;
-	font-family:  Arial, Helvetica, sans-serif;
+	font-family: 'Montserrat';
 	align-items: center;
 }
 
@@ -172,7 +172,7 @@ p {
 }
 
 h2 {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Montserrat';
 	color: white;
 }
 
@@ -257,7 +257,7 @@ h2 {
 
 .album-title, .artist {
 	display: block;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: 'Montserrat';
 }
 
 .album-title {
