--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
 p {
 	color: #8167D6;
 	font-size: 50px;
-	//font-weight: bold;
 }
 
 
@@ -57,14 +56,12 @@ p {
 	grid-area: main-view;
 	height: 80px;
 	z-index: 2;
-	background-color: ;
 }
 
 .main-view {
 	grid-area: main-view;
 	width: 100%;
 	height: 100px;
-	background-color: ;
 }
 
 .topbar {
@@ -113,6 +110,24 @@ p {
 	margin: 10px auto;
 }
 
+.logo-section {
+	display: flex;
+	padding: 10px;
+}
+
+.logo {
+	font-family: 'logo';
+	font-size: 50px;
+	text-align: center;
+}
+
+.logoimg {
+	width: 45px;
+	height: 45px;
+	margin: auto 0;
+	padding-right: 8px;
+}
+
 /* Now Playing Section --------------------------------------------------------*/
 .now-playing {
   grid-area: now-playing;
@@ -122,12 +137,6 @@ p {
 
 .now-playing-img {
   width: 100%;
-}
-
-.logo {
-	font-family: 'logo';
-	font-size: 60px;
-	text-align: center;
 }
 
 /* -------------------------------------*/
