--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .login-btn, #user-profile, h2, .album-title, .artist, .nav-bar-items, .logo {
-	font-family: 'Montserrat';
+	font-family: 'Abel';
 	color: white;
 }
 
