--- a/style/style.css
+++ b/style/style.css
@@ -17,8 +17,13 @@ tfoot, th, thead, time, tr, tt, u, ul, var, video {
 	vertical-align: baseline;
 }
 
+html {
+	height: 100%;
+}
+
 body {
 	background-color: #282B30;
+	height: 100%;
 }
 
 .album-title, .artist-name, .logo, .np-song-name, .np-artist-name {
@@ -51,11 +56,11 @@ p {
 	height: 100%;
 	position: relative;
 	display: grid;
-	grid-template-rows: auto 1fr;
+	grid-template-rows: auto 300px;
 	grid-template-columns: auto 1fr;
 	grid-template-areas:
 		"nav-bar main-view"
-		"now-playing main-view";
+		"now-playing now-playing";
 }
 
 .top-container {
@@ -67,7 +72,6 @@ p {
 .main-view {
 	grid-area: main-view;
 	width: 100%;
-	height: 100px;
 }
 
 .topbar {
@@ -86,8 +90,8 @@ p {
   background-color: #1E2124;
 }
 
-.ul {
-  list-style: none;
+li {
+  list-style-type: none;
 }
 
 .nav-bar-items {
@@ -160,7 +164,7 @@ p {
 	display: block;
 	width: 80%;
 	margin: 10px auto;
-	border-radius: 150px;
+	border-radius: 30px;
 }
 
 .np-artist-name, .np-song-name {
@@ -174,6 +178,24 @@ p {
 
 .np-artist-name {
 	font-size: 16px;
+}
+
+.progress-bar {
+
+}
+.play {
+    width: 0;
+    height: 0;
+    border-top: 8px solid transparent;
+    border-left: 12px solid #000;
+    border-bottom: 8px solid transparent;
+}
+
+.pause {
+    width: 4px;
+    height: 16px;
+    border-right: 4px solid #000;
+    border-left: 4px solid #000;
 }
 
 /* User button Section ----------------------------------------------------------*/
@@ -231,7 +253,7 @@ p {
 #new-releases {
 	margin-top: 20px;
 	display: grid;
-	grid-template-columns: repeat(4,1fr);
+	grid-template-columns: repeat(5,1fr);
 	grid-gap: 16px;
 }
 
