--- a/style/test.css
+++ b/style/test.css
@@ -1,5 +1,4 @@
 body {
-  height: 100%;
   background-image: url(mountains-2.jpg);
   background-attachment: fixed;
 	background-position: center;
@@ -12,9 +11,12 @@ body {
   border-radius: 20px;
   padding: 100px 0;
   text-align: center;
-  width: 500px;
-  margin: auto;
+  width: 600px;
   z-index: 10;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
 .login-btn, .title, .subtitle {
@@ -24,20 +26,25 @@ body {
 }
 
 .title {
-  font-size: 60px;
+  font-size: 64px;
 }
 
 .subtitle {
-  font-size: 20px;
+  font-size: 22px;
   padding-bottom: 20px;
 }
 
 .login-btn {
-  padding: 8px;
+  font-size: 14px;
+  padding: 16px;
 	border-radius: 10px;
-	background-color: #7663F2;
-	border: 0px;
+	background-color: #1e2124;
+	border: white solid 2px;
 	align-items: center;
 	cursor: pointer;
 }
 
+.login-btn:hover {
+  background: #7663F2;
+  transition: all 0.4s ease;
+}
