--- a/style/style.css
+++ b/style/style.css
@@ -70,6 +70,7 @@ p {
 	grid-area: main-view;
 	width: 100%;
 	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .topbar {
@@ -81,8 +82,35 @@ p {
 	justify-content: space-between;
 }
 
-::-webkit-scrollbar {
+.main-view::-webkit-scrollbar {
+	width: 8px;
+}
+
+.main-view::-webkit-scrollbar-thumb {
+	background: #ffffff;
+	border-radius: 10px;
 	width: 10px;
+}
+
+.main-view::-webkit-scrollbar-thumb:hover {
+	background: #555; 
+}
+
+.left, .right {
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	display: inline-block;
+	padding: 5px;
+}
+
+.right {
+	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+}
+  
+.left {
+	transform: rotate(135deg);
+	-webkit-transform: rotate(135deg);
 }
 
 /* Log in Screen Section ---------------------------------------------------------*/
@@ -303,9 +331,12 @@ li {
 
 #new-releases {
 	margin-top: 20px;
+	padding-bottom: 12px;
 	display: grid;
 	grid-template-columns: repeat(5,1fr);
 	grid-gap: 16px;
+	/*overflow-x: scroll;
+	scroll-snap-type: x proximity;*/
 }
 
 .albumimg {
