--- a/style/style.css
+++ b/style/style.css
@@ -422,26 +422,28 @@ li {
 }
 
 .following-artists {
-	margin-top: 16px;
-	display: grid;
+	/*display: grid;*/
 	position: relative;
 	border-radius: 20px;
 }
 
 .following-overlay {
 	position: absolute;
-	width: 200px;
-	height: 200px;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
 	border-radius: 20px;
 	opacity: 0;
-	transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease;
 	background-color: #1e212480;
 }
 
 .fol-art-img {
-	width: 200px;
-	height: 200px;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	border-radius: 20px;
+	display: block;
 }
 
 .fol-art-name {
@@ -453,14 +455,14 @@ li {
 	font-size: 16px;
 	letter-spacing: 0.5px;
 	font-weight: bold;
-	font-style: Montserrat;
+	font-family: 'Montserrat';
 }
 
-.following-artists:hover, .following-overlay:hover {
+.following-artists:hover .following-overlay {
 	opacity: 1;
 }
 
-.following-artists:hover {
+/*.following-artists:hover {
 	transform: scale(1.2);
-}
+}*/
 
