Working music player buttons

--- a/style/style.css
+++ b/style/style.css
@@ -345,6 +345,10 @@ li {
 	padding-left: 20px;
 }
 
+.play, .pause {
+	display: none;
+}
+
 
 /* User button Section ----------------------------------------------------------*/
 
@@ -478,7 +482,7 @@ li {
 .none {
 	font-size: 24px;
 	text-align: center;
-	margin-top: 150px;
+	margin: 50px 0;
 }
 
 /*  ---------------------------------------------------------------------------- */
