--- a/style/style.css
+++ b/style/style.css
@@ -697,9 +697,6 @@ label {
 	margin-bottom: 10px;
 }
 
-
-
-
 /* Library Section ---------------------------------------------------------*/
 #library-playlist {
 	margin-top: 20px;
@@ -737,6 +734,106 @@ label {
 	font-size: 24px;
 	text-align: center;
 	margin: 50px 0;
+}
+
+#top-tracks {
+	margin-top: 16px;
+	margin-bottom: 20px;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-gap: 16px;
+
+}
+
+.user-top-tracks {
+	/*display: grid;*/
+	position: relative;
+	border-radius: 20px;
+}
+
+.top-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	border-radius: 20px;
+	opacity: 0;
+	transition: all 0.5s ease;
+	background-color: #1e212480;
+}
+
+.top-track-img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 20px;
+	display: block;
+}
+
+.top-track-name {
+	display: block;
+	position: relative;
+	top: 40%;
+	text-align: center;
+	color: white;
+	font-size: 16px;
+	letter-spacing: 0.5px;
+	font-weight: bold;
+	font-family: 'Montserrat';
+}
+
+.user-top-tracks:hover .top-overlay {
+	opacity: 1;
+}
+
+#top-artist {
+	margin-top: 16px;
+	margin-bottom: 20px;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-gap: 16px;
+
+}
+
+.user-top-artists {
+	/*display: grid;*/
+	position: relative;
+	border-radius: 20px;
+}
+
+.top-artist-overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	border-radius: 20px;
+	opacity: 0;
+	transition: all 0.5s ease;
+	background-color: #1e212480;
+}
+
+.top-artist-img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 20px;
+	display: block;
+}
+
+.top-artist-name {
+	display: block;
+	position: relative;
+	top: 40%;
+	text-align: center;
+	color: white;
+	font-size: 16px;
+	letter-spacing: 0.5px;
+	font-weight: bold;
+	font-family: 'Montserrat';
+}
+
+.user-top-artists:hover .top-artist-overlay {
+	opacity: 1;
 }
 
 /*  ---------------------------------------------------------------------------- */
