--- a/style/style.css
+++ b/style/style.css
@@ -166,6 +166,10 @@ body {
 	transition: all 0.4s ease;
 }
 
+.login-btn:focus {
+	outline: 0;
+}
+
 /* Navigation Bar Section --------------------------------------------------------*/
 .nav-bar {
   grid-area: nav-bar;
@@ -836,9 +840,6 @@ label {
 	opacity: 1;
 }
 
-/*  ---------------------------------------------------------------------------- */
-
-
 /* Following Section (Peyton's Workspace)---------------------------------------------------------*/
 #following {
 	margin-top: 16px;
@@ -894,12 +895,92 @@ label {
 }*/
 
 /* Featured Section (Peyton's Workspace)------------------------------------------------------*/
+.feat-dj-section {
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+	grid-template-areas: 'feat dj';
+	grid-gap: 16px;
+}
+
+.featured-playlists-grid {
+	grid-area: feat;
+}
+
+.dj-status-grid {
+	grid-area: dj;
+}
+
+.dj-status-contain {
+	background-color: #1e2124;
+    width: 100%;
+    height: calc(100% - 45px);
+	border-radius: 16px;
+	margin-top: 45px;
+	letter-spacing: 0.5px;
+}
+
+.dj-status-title {
+	text-align: center;
+	padding: 10px 10px 0 10px;
+}
+
+.dj-grid {
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-areas: 'info live';
+	padding: 10px 0;
+}
+
+.dj-info {
+	grid-area: info;
+	padding-left: 16px;
+}
+
+.dj-now-play {
+	font-size: 12px;
+}
+
+.dj-name {
+	font-weight: bold;
+}
+
+.dj-status {
+	grid-area: live;
+	height: 10px;
+	width: 10px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	margin: auto 0;
+}
+
+.dj-status-live {
+	grid-area: live;
+	height: 10px;
+	width: 10px;
+	background-color: #63f26f;
+	border-radius: 50%;
+	display: inline-block;
+	margin: auto 0;
+}
+
+.dj-name, .dj-now-play {
+	color: white;
+	font-family: 'Montserrat';
+	padding: 1px 0;
+}
+
+.dj-divider {
+	border: 1px solid white;
+    width: 90%;
+    margin: 5px auto;
+}
+
 #featured-playlists-playlist {
 	margin-top: 16px;
 	display: grid;
 	grid-template-columns: repeat(3,1fr);
 	grid-gap: 16px;
-	max-width: 100%;
 	overflow: hidden;
 }
 
@@ -909,7 +990,6 @@ label {
 	font-size: 14px;
 	letter-spacing: 0.5px;
 	font-weight: bold;
-	text-align: left;
 }
 
 .feat-play-img {
@@ -921,12 +1001,24 @@ label {
 }
 
 /* Recently Played Section (Peyton's Workspace)------------------------------------------------*/
+.rec-play-grid {
+	margin-top: 16px;
+}
+
 #recently-played-playlist {
 	margin-top: 16px;
+	margin-bottom: 20px;
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	grid-gap: 16px;
-	
+}
+
+.rec-play {
+	display: inline-block;
+    vertical-align: top;
+    position: relative;
+    background-color: #1E2124;
+    border-radius: 20px;
 }
 
 .rec-play-name, .rec-play-artist {
@@ -935,25 +1027,26 @@ label {
 }
 
 .rec-play-name {
-	font-family: 'Montserrat';
+	font-family: 'Abel';
 	color: white;
-	font-weight: bold;
 	letter-spacing: 0.5px;
 	font-size: 14px;
+	padding: 0 10px  14px 10px;
 }
 
 .rec-play-artist {
-	font-family: 'Montserrat';
+	font-family: 'Abel';
 	color: white;
-	font-size: 14px;
+	font-size: 16px;
 	letter-spacing: 0.5px;
 	font-weight: bold;
+	padding: 0 10px;
 }
 
 .rec-play-img {
 	width: 100%;
-	height: 100%;
-	border-radius: 20px;
+	border-radius: 20px 20px 0 0;
+	margin-bottom: 4px;
 }
 
 
